Fixed datepicker z-index in modals

--- a/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/modals.less
+++ b/owsi-core/owsi-core-components/owsi-core-component-wicket-more/src/main/java/fr/openwide/core/wicket/more/markup/html/template/css/bootstrap3/modals.less
@@ -23,6 +23,10 @@
 	input.hasMonthpicker {
 		z-index: @zindex-modal-date-picker;
 		position: relative;
+		&:focus {
+			// Override z-index:3 for ".input-group .form-control:focus" (bootstrap rule)
+			z-index: @zindex-modal-date-picker;
+		}
 	}
 }
 
